--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:xliff="http://schemas.android.com/tools">
     <string name="app_name">DaneCreteil</string>
     <string name="message_accueil">Bienvenue sur l\'application de gestion des animateurs de la DANE de Créteil</string>
     <string name="annuaire_etabs">Etablissements par Département</string>
@@ -16,4 +16,28 @@
     <string name="action_mail">envoyer un mail</string>
     <string name="titre_detail_activity">Information sur  l\'établissement</string>
     <string name="action_rafraichir">Rafraîchir</string>
+
+    <string name="pref_depart_label">Département</string>
+    <string name="pref_depart_key" translatable="false">depart</string>
+    <string name="pref_depart_default" translatable="false">93</string>
+    <string name="pref_depart_label_default" translatable="false">Seine Saint Denis</string>
+
+    <string name="pref_depart_label_93">Seine Saint Denis</string>
+    <string name="pref_depart_label_94">Val de Marne</string>
+    <string name="pref_depart_label_77">Seine et Marne</string>
+
+    <string name="pref_depart_77" translatable="false">77</string>
+    <string name="pref_depart_93" translatable="false">93</string>
+    <string name="pref_depart_94" translatable="false">94</string>
+
+    <string name="format_departement"><xliff:g id="depart">%1$s</xliff:g>!</string>
+    <string name="format_adresse">Adresse : <xliff:g id="adresse">%1$s</xliff:g></string>
+    <string name="format_ville">Liste des villes en : <xliff:g id="villes">%1$s</xliff:g></string>
+    <string name="format_etab">Liste des établissements de :<xliff:g id="etabs">%1$s</xliff:g></string>
+    <string name="format_detail_etab">Informations sur l\'établissement :<xliff:g id="detailetabs">%1$s</xliff:g></string>
+    <string name="action_departement">Département</string>
+    <string name="title_parametres_activity">Département par défault</string>
+    <string name="message_etabs">Nom de l\'établissement</string>
+    <string name="label_recherche_etab_par_nom">Nom de l\'établissement à rechercher</string>
+    <string name="label_recherche_personnel_par_nom">Nom du personnel administratif</string>
 </resources>
